fix bug with overflow in about section

--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -37,7 +37,7 @@ body textarea:required:valid
     color: #666
 
 html, body
-    height: 100%
+    height: auto
 
 body
     font-size: $defaultFontSize
