--- a/app/sass/media.sass
+++ b/app/sass/media.sass
@@ -109,6 +109,7 @@
                 &:after
                     top: -20px
                     left: -10px
+                    transform: none
             &-text
                 font-weight: 300
                 font-size: 14px
